[package]
name = "llql"
authors = ["AmrDeveloper"]
version = "0.8.0"
edition = "2021"
description = "A tool to run SQL-like query on your LLVM IR or Bitcode files"
license = "MIT"
repository = "https://github.com/amrdeveloper/llql/"
documentation = "https://github.com/amrdeveloper/llql"
readme = "README.md"
keywords = ["llvm-ir", "bitcode", "language", "gitql", "llvm"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[dependencies]
gitql-core = "0.17.0"
gitql-std = "0.17.0"
gitql-ast = "0.36.0"
gitql-parser = "0.39.0"
gitql-engine = "0.40.0"
gitql-cli = "0.40.0"

inkwell = { version = "0.6.0", features = ["llvm18-1"] }

lineeditor = "0.4.1"
dyn-clone = "1.0.20"

[profile.release]
lto = true
